Fixed alignment of milkshakes on the homepage

--- a/app/assets/stylesheets/milkshake_index.scss
+++ b/app/assets/stylesheets/milkshake_index.scss
@@ -15,7 +15,7 @@
     section {
         display: flex;
         flex-direction: row;
-        align-items: flex-start;
+        align-items: stretch;
         justify-content: space-around;
         flex-wrap: wrap;
 
